--- a/MauiAppMinhasCompras/Views/EditarProduto.xaml
+++ b/MauiAppMinhasCompras/Views/EditarProduto.xaml
@@ -14,5 +14,7 @@
         <Entry x:Name="txt_quantidade" Text="{Binding Quantidade}" Keyboard="Numeric"/>
         <Label Text="Preço Unitário: "/>
         <Entry x:Name="txt_preco" Text="{Binding Preco}" Keyboard="Numeric"/>
+        <Label Text="Categoria: "/>
+        <Entry x:Name="txt_categoria" Text="{Binding Categoria}" />
     </VerticalStackLayout>
 </ContentPage>
