--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -5,6 +5,7 @@
              Title="Minhas Compras">
 
     <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Relatorio" Clicked="ToolbarItem_Clicked"/>
         <ToolbarItem Text="Somar" Clicked="Somar_Clicked"/>
         <ToolbarItem Text="Adicionar" Clicked="Adicionar_Clicked"/>
     
@@ -21,7 +22,7 @@
     
     <StackLayout>
         <SearchBar x:Name="txt_search" 
-                   Margin="-15, 0, 0, 0"
+                   Margin="15, 0, 15, 0"
                    Placeholder="Busca de Produtos" 
                    TextChanged="txt_search_TextChanged"/>
         <Frame Padding="0"
@@ -34,13 +35,14 @@
                   Refreshing="lst_produtos_Refreshing"
                   ItemSelected="lst_produtos_ItemSelected">
             <ListView.Header>
-                <Grid ColumnDefinitions="30, 100, 80, 50, 90"
-                      BackgroundColor="{StaticResource Gray100}">
-                        <Label Grid.Column="0" Text="ID" Padding="5"FontAttributes="Bold"/>
-                        <Label Grid.Column="1" Text="Descrição"FontAttributes="Bold"/>
-                        <Label Grid.Column="2" Text="Preço"FontAttributes="Bold"/>
+                <Grid ColumnDefinitions="30, 100, 80, 50, 90, *"
+                      BackgroundColor="{StaticResource Gray500}">
+                        <Label Grid.Column="0" Text="ID" Padding="5" FontAttributes="Bold"/>
+                        <Label Grid.Column="1" Text="Descrição" FontAttributes="Bold"/>
+                        <Label Grid.Column="2" Text="Preço" FontAttributes="Bold"/>
                         <Label Grid.Column="3" Text="Qnt" FontAttributes="Bold"/>
                         <Label Grid.Column="4" Text="Total" FontAttributes="Bold"/>
+                        <Label Grid.Column="5" Text="Categoria" FontAttributes="Bold"/>
                 </Grid>
             </ListView.Header>
             <ListView.ItemTemplate>
@@ -49,12 +51,13 @@
                         <ViewCell.ContextActions>
                             <MenuItem Text="Remover" Clicked="MenuItem_Clicked"/>
                         </ViewCell.ContextActions>
-                            <Grid ColumnDefinitions="30, 100, 80, 50, 90">
-                            <Label Grid.Column="0" Text="{Binding Id}"/>
+                            <Grid ColumnDefinitions="30, 100, 80, 50, 90, *">
+                            <Label Grid.Column="0" Text="{Binding Id}" HorizontalTextAlignment="Center"/>
                             <Label Grid.Column="1" Text="{Binding Descricao}"/>
                             <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}"/>
                             <Label Grid.Column="3" Text="{Binding Quantidade}"/>
                             <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}"/>
+                            <Label Grid.Column="5" Text="{Binding Categoria}"/>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
