--- a/MauiAppMinhasCompras/Views/NovoProduto.xaml
+++ b/MauiAppMinhasCompras/Views/NovoProduto.xaml
@@ -16,6 +16,8 @@
         <Label Text="Quantidade: "/>
         <Entry x:Name="txt_quantidade" Keyboard="Numeric"/>
         <Label Text="Preço Unitário: "/>
-        <Entry x:Name="txt_preco" Keyboard="Numeric"/>  
+        <Entry x:Name="txt_preco" Keyboard="Numeric"/>
+        <Label Text="Categoria: "/>
+        <Entry x:Name="txt_categoria" />
     </VerticalStackLayout>
 </ContentPage>
