--- a/MauiAppMinhasCompras/Views/Relatorio.xaml
+++ b/MauiAppMinhasCompras/Views/Relatorio.xaml
@@ -3,10 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppMinhasCompras.Views.Relatorio"
              Title="Relatorio">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Back" Clicked="ToolbarItem_Clicked"/>
+    </ContentPage.ToolbarItems>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label">
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <StackLayout>
+        <Frame Padding="0"
+               Margin="10"
+               VerticalOptions="FillAndExpand">
+
+            <ListView x:Name="Rel_produtos">
+                <ListView.Header>
+                    <Grid ColumnDefinitions="200, 80"
+                      BackgroundColor="{StaticResource Gray500}">
+                        <Label Grid.Column="0" Text="Categoria" Padding="5" FontAttributes="Bold"/>
+                        <Label Grid.Column="1" Text="Total" FontAttributes="Bold"/>
+                    </Grid>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid ColumnDefinitions="200, 80">
+                                <Label Grid.Column="0" Text="{Binding Categoria}"/>
+                                <Label Grid.Column="1" Text="{Binding Total, StringFormat='{}{0:c}'}"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Frame>
+    </StackLayout>
 </ContentPage>
